[package]
name = "message_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
crossterm = "0.26.1"
ratatui = "0.22.0"
serde = { version = "1.0.180", features = ["serde_derive"] }
